feat: Add persistent storage configuration for Kubernetes deployment
- Created persistent volumes for local storage at /home/storage/ns/ai-receptionist
- Updated MySQL and Redis to use local-storage storage class
- Added storage class definition for local volumes
- Created setup-storage.sh script to prepare host directories
- Updated deployment script to set up storage before deploying services
- Configured node affinity for k8svm node

Storage volumes:
- mysql-pv: 50Gi for MySQL data
- redis-pv: 10Gi for Redis data
- freeswitch-logs-pv: 20Gi for FreeSWITCH logs
- freeswitch-recordings-pv: 100Gi for call recordings

This resolves the 'unbound immediate PersistentVolumeClaims' deployment issue.

--- a/k8s-manifests/database/redis.yaml
+++ b/k8s-manifests/database/redis.yaml
@@ -100,7 +100,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard
+  storageClassName: local-storage
 ---
 apiVersion: v1
 kind: ConfigMap
