--- a/k8s-manifests/database/mysql.yaml
+++ b/k8s-manifests/database/mysql.yaml
@@ -85,7 +85,7 @@ spec:
       name: mysql-data
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: standard
+      storageClassName: local-storage
       resources:
         requests:
           storage: 50Gi
