--- a/k8s-manifests/database/mysql.yaml
+++ b/k8s-manifests/database/mysql.yaml
@@ -18,6 +18,23 @@ spec:
         app: mysql
         component: database
     spec:
+      initContainers:
+      - name: mysql-init
+        image: mysql:8.0
+        command:
+        - bash
+        - -c
+        - |
+          # Ensure proper ownership of the data directory
+          chown -R mysql:mysql /var/lib/mysql
+          # Remove any socket files that might cause issues
+          rm -f /var/lib/mysql/mysql.sock /var/lib/mysql/mysql.sock.lock
+          echo "MySQL init container completed"
+        volumeMounts:
+        - name: mysql-data
+          mountPath: /var/lib/mysql
+        securityContext:
+          runAsUser: 0
       containers:
       - name: mysql
         image: mysql:8.0
@@ -132,13 +149,14 @@ metadata:
 data:
   my.cnf: |
     [mysqld]
+    # Performance settings
     innodb_buffer_pool_size = 2G
     innodb_log_file_size = 256M
     innodb_flush_log_at_trx_commit = 2
     innodb_flush_method = O_DIRECT
     max_connections = 500
-    query_cache_size = 0
-    query_cache_type = 0
+    
+    # Logging
     slow_query_log = 1
     slow_query_log_file = /var/lib/mysql/slow.log
     long_query_time = 2
@@ -146,11 +164,15 @@ data:
     # Binary logging for replication
     log-bin = mysql-bin
     binlog_format = ROW
-    expire_logs_days = 7
+    binlog_expire_logs_seconds = 604800  # 7 days
     
     # Character set
     character-set-server = utf8mb4
     collation-server = utf8mb4_unicode_ci
+    
+    # Security and compatibility
+    skip-host-cache
+    skip-name-resolve
     
     [mysql]
     default-character-set = utf8mb4
