feat: Update Kubernetes manifests to use private registry
- Update all service images to use 176.9.65.80 registry prefix
- Changed backend, freeswitch, and ai-engine deployments
- Ensures consistency with private Docker registry setup
- Images will be: 176.9.65.80/ai-receptionist/{service}:latest

--- a/k8s-manifests/ai-engine/deployment.yaml
+++ b/k8s-manifests/ai-engine/deployment.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: ai-engine
-        image: ai-receptionist/ai-engine:latest
+        image: 176.9.65.80/ai-receptionist/ai-engine:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
