refactor: Reorganize project structure and fix Docker registry URL
- Move all documentation to docs/ directory
- Move all scripts to scripts/ directory
- Move docker-compose.yml to docker/ directory
- Update README.md with new project structure
- Fix Docker registry URL to use correct port 176.9.65.80:5000
- Update all Kubernetes manifests with correct registry URL
- Fix AI Engine dependencies - use SpeechRecognition with flexible versions
- Add additional system dependencies for audio processing

--- a/ai-engine/Dockerfile
+++ b/ai-engine/Dockerfile
@@ -10,7 +10,10 @@ RUN apt-get update && apt-get install -y \
     libffi-dev \
     libssl-dev \
     portaudio19-dev \
+    flac \
+    sox \
     ffmpeg \
+    alsa-utils \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
