--- a/ai-engine/requirements.txt
+++ b/ai-engine/requirements.txt
@@ -2,15 +2,15 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 openai==1.3.0
 aioredis==2.0.1
-speech-recognition==3.10.0
-gTTS==2.4.0
-numpy==1.24.3
-scipy==1.11.4
-pydantic==2.5.0
-python-multipart==0.0.6
-websockets==12.0
-pyaudio==0.2.11
-pydub==0.25.1
-soundfile==0.12.1
-librosa==0.10.1
-python-dotenv==1.0.0
+SpeechRecognition>=3.10.0
+gTTS>=2.4.0
+numpy>=1.24.0,<2.0.0
+scipy>=1.11.0
+pydantic>=2.5.0,<3.0.0
+python-multipart>=0.0.6
+websockets>=12.0
+pyaudio>=0.2.11
+pydub>=0.25.1
+soundfile>=0.12.1
+librosa>=0.10.1
+python-dotenv>=1.0.0
