fix: Update frontend to Node.js 20 and fix FreeSWITCH deployment
- Change frontend Dockerfile from Node.js 18 to Node.js 20
- Install all dependencies (including dev) needed for Nuxt build
- Fix environment variables for API connectivity in production
- Update FreeSWITCH deployment with correct ConfigMap reference
- Add proper HTTP health checks (/health, /ready)
- Add environment variables for configuration

--- a/freeswitch-k8s-deployment/k8s/deployment.yaml
+++ b/freeswitch-k8s-deployment/k8s/deployment.yaml
@@ -19,16 +19,31 @@ spec:
         ports:
         - containerPort: 5060
         - containerPort: 8080
+        env:
+        - name: FREESWITCH_HOST
+          value: "0.0.0.0"
+        - name: FREESWITCH_PORT
+          value: "8080"
+        - name: AI_ENGINE_URL
+          value: "http://ai-engine:8000"
+        - name: BACKEND_API_URL
+          value: "http://backend-api:3000/api/v1"
         volumeMounts:
         - name: freeswitch-config
-          mountPath: /usr/local/freeswitch/conf
-        readinessProbe:
-          exec:
-            command:
-            - /usr/local/bin/healthcheck.sh
+          mountPath: /app/config
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
           initialDelaySeconds: 30
+          periodSeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 10
           periodSeconds: 10
       volumes:
       - name: freeswitch-config
         configMap:
-          name: freeswitch-configmap
+          name: freeswitch-config
