--- a/k8s-manifests/freeswitch/configmap-xml.yaml
+++ b/k8s-manifests/freeswitch/configmap-xml.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: freeswitch-config
-  namespace: freeswitch
+  namespace: ai-receptionist
 data:
   sofia.conf.xml: |
     <!-- sofia.conf.xml -->
