--- a/k8s-manifests/database/mysql.yaml
+++ b/k8s-manifests/database/mysql.yaml
@@ -28,6 +28,10 @@ spec:
           set -e
           echo "Starting MySQL initialization..."
           
+          # Create socket directory with proper permissions
+          mkdir -p /var/run/mysqld
+          chown -R mysql:mysql /var/run/mysqld
+          
           # Check if MySQL data directory exists and is empty
           if [ ! -d "/var/lib/mysql/mysql" ]; then
             echo "MySQL system tables not found. Initializing database..."
@@ -37,6 +41,7 @@ spec:
             
             # Remove any socket files that might cause issues
             rm -f /var/lib/mysql/mysql.sock /var/lib/mysql/mysql.sock.lock
+            rm -f /var/run/mysqld/mysqld.sock /var/run/mysqld/mysqld.sock.lock
             
             # Initialize the MySQL database with system tables
             mysqld --initialize-insecure --user=mysql --datadir=/var/lib/mysql
@@ -46,6 +51,10 @@ spec:
             echo "MySQL system tables already exist. Skipping initialization."
             # Still ensure proper ownership
             chown -R mysql:mysql /var/lib/mysql
+            chown -R mysql:mysql /var/run/mysqld
+            # Clean up any stale sockets
+            rm -f /var/lib/mysql/mysql.sock /var/lib/mysql/mysql.sock.lock
+            rm -f /var/run/mysqld/mysqld.sock /var/run/mysqld/mysqld.sock.lock
           fi
           
           echo "MySQL init container completed"
@@ -67,6 +76,8 @@ spec:
         volumeMounts:
         - name: mysql-data
           mountPath: /var/lib/mysql
+        - name: mysql-socket
+          mountPath: /var/run/mysqld
         securityContext:
           runAsUser: 0
       containers:
@@ -105,6 +116,8 @@ spec:
         - name: mysql-config
           mountPath: /etc/mysql/conf.d
           readOnly: true
+        - name: mysql-socket
+          mountPath: /var/run/mysqld
         livenessProbe:
           exec:
             command:
@@ -131,6 +144,8 @@ spec:
       - name: mysql-config
         configMap:
           name: mysql-config
+      - name: mysql-socket
+        emptyDir: {}
   volumeClaimTemplates:
   - metadata:
       name: mysql-data
