--- a/k8s-manifests/ai-engine/deployment.yaml
+++ b/k8s-manifests/ai-engine/deployment.yaml
@@ -38,6 +38,12 @@ spec:
               key: openai-api-key
         - name: BACKEND_API_URL
           value: "http://backend-api:3000/api/v1"
+        - name: REDIS_URL
+          value: "redis://redis:6379"
+        - name: HOST
+          value: "0.0.0.0"
+        - name: PORT
+          value: "8000"
         - name: LOG_LEVEL
           value: "INFO"
         - name: WORKERS
