--- a/ai-engine/Dockerfile
+++ b/ai-engine/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && apt-get install -y \
     sox \
     ffmpeg \
     alsa-utils \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
