Set imagePullPolicy: Always for all deployments to ensure latest images are pulled

--- a/k8s-manifests/ai-engine/deployment.yaml
+++ b/k8s-manifests/ai-engine/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       containers:
       - name: ai-engine
         image: 176.9.65.80:5000/ai-receptionist/ai-engine:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - name: http
           containerPort: 8000
