--- a/k8s-manifests/database/mysql.yaml
+++ b/k8s-manifests/database/mysql.yaml
@@ -21,6 +21,7 @@ spec:
       initContainers:
       - name: mysql-init
         image: mysql:8.0
+        imagePullPolicy: Always
         command:
         - bash
         - -c
@@ -83,7 +84,7 @@ spec:
       containers:
       - name: mysql
         image: mysql:8.0
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - name: mysql
           containerPort: 3306
