--- a/k8s-manifests/database/redis.yaml
+++ b/k8s-manifests/database/redis.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: redis
         image: redis:7-alpine
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - name: redis
           containerPort: 6379
