Add API V1 health controller for service health checks

--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -80,9 +80,9 @@ metadata:
     app: frontend
     component: ui
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
-  - port: 3000
+  - port: 80
     targetPort: 3000
     protocol: TCP
     name: http
