Add PVC selectors to prevent incorrect volume binding
- Add selector matchLabels to MySQL StatefulSet volumeClaimTemplate
- Add selector matchLabels to Redis PVC (app: redis)
- Add selector matchLabels to FreeSWITCH PVC (app: freeswitch)
- Ensures MySQL PVC binds only to mysql PV (50Gi)
- Prevents binding to wrong volumes like freeswitch-recordings-pv (100Gi)
- Fixes MySQL CrashLoopBackOff caused by incorrect volume binding

--- a/k8s-manifests/database/redis.yaml
+++ b/k8s-manifests/database/redis.yaml
@@ -97,6 +97,9 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  selector:
+    matchLabels:
+      app: redis
   resources:
     requests:
       storage: 10Gi
