--- a/k8s-manifests/freeswitch/deployment.yaml
+++ b/k8s-manifests/freeswitch/deployment.yaml
@@ -124,6 +124,9 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  selector:
+    matchLabels:
+      app: freeswitch
   resources:
     requests:
       storage: 10Gi
