--- a/k8s-manifests/database/mysql.yaml
+++ b/k8s-manifests/database/mysql.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: mysql
   namespace: ai-receptionist
@@ -7,7 +7,6 @@ metadata:
     app: mysql
     component: database
 spec:
-  serviceName: mysql-headless
   replicas: 1
   selector:
     matchLabels:
@@ -18,6 +17,10 @@ spec:
         app: mysql
         component: database
     spec:
+      securityContext:
+        fsGroup: 999  # MySQL group ID
+        runAsUser: 999  # MySQL user ID
+        runAsGroup: 999
       initContainers:
       - name: mysql-init
         image: mysql:8.0
@@ -125,6 +128,9 @@ spec:
           readOnly: true
         - name: mysql-socket
           mountPath: /var/run/mysqld
+        securityContext:
+          runAsUser: 999  # MySQL user
+          runAsGroup: 999  # MySQL group
         livenessProbe:
           tcpSocket:
             port: 3306
@@ -140,23 +146,15 @@ spec:
           timeoutSeconds: 5
           failureThreshold: 3
       volumes:
+      - name: mysql-data
+        hostPath:
+          path: /home/storage/ns/ai-receptionist/mysql
+          type: DirectoryOrCreate
       - name: mysql-config
         configMap:
           name: mysql-config
       - name: mysql-socket
         emptyDir: {}
-  volumeClaimTemplates:
-  - metadata:
-      name: mysql-data
-    spec:
-      accessModes: ["ReadWriteOnce"]
-      storageClassName: local-storage
-      selector:
-        matchLabels:
-          app: mysql
-      resources:
-        requests:
-          storage: 50Gi
 ---
 apiVersion: v1
 kind: Service
