Fix MySQL user network access permissions
- Add proper user creation in init container using root credentials
- Create ai_receptionist user with '%' host (allows network connections)
- Grant ALL PRIVILEGES on ai_receptionist_production database
- Use temporary MySQL server during initialization to set up users
- This fixes 'Host is not allowed to connect' error from backend API pods
- Backend API can now connect from cluster IP addresses like 192.168.244.199

--- a/k8s-manifests/database/mysql.yaml
+++ b/k8s-manifests/database/mysql.yaml
@@ -54,6 +54,36 @@ spec:
             # Initialize the MySQL database with system tables
             mysqld --initialize-insecure --user=mysql --datadir=/var/lib/mysql
             
+            # Start MySQL temporarily to create user with proper permissions
+            echo "Starting temporary MySQL server to create users..."
+            mysqld --user=mysql --datadir=/var/lib/mysql --skip-networking --socket=/var/run/mysqld/mysqld.sock &
+            MYSQL_PID=$!
+            
+            # Wait for MySQL to start
+            for i in {1..30}; do
+              if mysql --socket=/var/run/mysqld/mysqld.sock -e "SELECT 1" 2>/dev/null; then
+                echo "MySQL is ready"
+                break
+              fi
+              echo "Waiting for MySQL to start... ($i/30)"
+              sleep 2
+            done
+            
+            # Create database and user with network access using root
+            echo "Creating database and user with network permissions..."
+            mysql --socket=/var/run/mysqld/mysqld.sock -u root -p"${MYSQL_ROOT_PASSWORD}" -e "
+              CREATE DATABASE IF NOT EXISTS \`${MYSQL_DATABASE}\`;
+              CREATE USER IF NOT EXISTS '${MYSQL_USER}'@'%' IDENTIFIED BY '${MYSQL_PASSWORD}';
+              GRANT ALL PRIVILEGES ON \`${MYSQL_DATABASE}\`.* TO '${MYSQL_USER}'@'%';
+              FLUSH PRIVILEGES;
+              SELECT User, Host FROM mysql.user WHERE User='${MYSQL_USER}';
+            "
+            
+            # Stop the temporary MySQL instance
+            echo "Stopping temporary MySQL server..."
+            kill $MYSQL_PID
+            wait $MYSQL_PID 2>/dev/null || true
+            
             # Ensure proper ownership after initialization
             chown -R mysql:mysql /var/lib/mysql
             
