--- a/k8s-manifests/database/mysql.yaml
+++ b/k8s-manifests/database/mysql.yaml
@@ -1,11 +1,33 @@
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mysql-config
+  namespace: ai-receptionist
+data:
+  my.cnf: |
+    [mysqld]
+    datadir=/var/lib/mysql
+    socket=/var/run/mysqld/mysqld.sock
+
+    character-set-server = utf8mb4
+    collation-server = utf8mb4_unicode_ci
+    skip-host-cache
+    skip-name-resolve
+    innodb_buffer_pool_size = 512M
+    max_connections = 100
+
+    [client]
+    socket=/var/run/mysqld/mysqld.sock
+    default-character-set = utf8mb4
+
+    [mysql]
+    default-character-set = utf8mb4
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mysql
   namespace: ai-receptionist
-  labels:
-    app: mysql
-    component: database
 spec:
   serviceName: mysql-headless
   replicas: 1
@@ -19,116 +41,16 @@ spec:
         component: database
     spec:
       securityContext:
-        fsGroup: 999  # MySQL group ID
-        runAsUser: 999  # MySQL user ID
+        fsGroup: 999
+        runAsUser: 999
         runAsGroup: 999
-      initContainers:
-      - name: mysql-init
-        image: mysql:8.0
-        imagePullPolicy: Always
-        command:
-        - bash
-        - -c
-        - |
-          set -e
-          echo "Starting MySQL initialization..."
-          
-          # Create socket directory with proper permissions
-          mkdir -p /var/run/mysqld
-          chown -R mysql:mysql /var/run/mysqld
-          
-          # Ensure proper ownership of the data directory first
-          chown -R mysql:mysql /var/lib/mysql
-          
-          # Check if MySQL data directory exists and is properly initialized
-          if [ ! -f "/var/lib/mysql/mysql/user.MYD" ]; then
-            echo "MySQL system tables not found. Initializing database..."
-            
-            # Remove any socket files that might cause issues
-            rm -f /var/lib/mysql/mysql.sock /var/lib/mysql/mysql.sock.lock
-            rm -f /var/run/mysqld/mysqld.sock /var/run/mysqld/mysqld.sock.lock
-            
-            # Clear the directory completely to ensure clean initialization
-            rm -rf /var/lib/mysql/*
-            
-            # Initialize the MySQL database with system tables
-            mysqld --initialize-insecure --user=mysql --datadir=/var/lib/mysql
-            
-            # Start MySQL temporarily to create user with proper permissions
-            echo "Starting temporary MySQL server to create users..."
-            mysqld --user=mysql --datadir=/var/lib/mysql --skip-networking --socket=/var/run/mysqld/mysqld.sock &
-            MYSQL_PID=$!
-            
-            # Wait for MySQL to start
-            for i in {1..30}; do
-              if mysql --socket=/var/run/mysqld/mysqld.sock -e "SELECT 1" 2>/dev/null; then
-                echo "MySQL is ready"
-                break
-              fi
-              echo "Waiting for MySQL to start... ($i/30)"
-              sleep 2
-            done
-            
-            # Create database and user with network access using root
-            echo "Creating database and user with network permissions..."
-            mysql --socket=/var/run/mysqld/mysqld.sock -u root -p"${MYSQL_ROOT_PASSWORD}" -e "
-              CREATE DATABASE IF NOT EXISTS \`${MYSQL_DATABASE}\`;
-              CREATE USER IF NOT EXISTS '${MYSQL_USER}'@'%' IDENTIFIED BY '${MYSQL_PASSWORD}';
-              GRANT ALL PRIVILEGES ON \`${MYSQL_DATABASE}\`.* TO '${MYSQL_USER}'@'%';
-              FLUSH PRIVILEGES;
-              SELECT User, Host FROM mysql.user WHERE User='${MYSQL_USER}';
-            "
-            
-            # Stop the temporary MySQL instance
-            echo "Stopping temporary MySQL server..."
-            kill $MYSQL_PID
-            wait $MYSQL_PID 2>/dev/null || true
-            
-            # Ensure proper ownership after initialization
-            chown -R mysql:mysql /var/lib/mysql
-            
-            echo "MySQL database initialized successfully"
-          else
-            echo "MySQL system tables already exist. Skipping initialization."
-            # Still ensure proper ownership
-            chown -R mysql:mysql /var/lib/mysql
-            chown -R mysql:mysql /var/run/mysqld
-            # Clean up any stale sockets
-            rm -f /var/lib/mysql/mysql.sock /var/lib/mysql/mysql.sock.lock
-            rm -f /var/run/mysqld/mysqld.sock /var/run/mysqld/mysqld.sock.lock
-          fi
-          
-          echo "MySQL init container completed"
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secrets
-              key: root-password
-        - name: MYSQL_DATABASE
-          value: "ai_receptionist_production"
-        - name: MYSQL_USER
-          value: "ai_receptionist"
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secrets
-              key: user-password
-        volumeMounts:
-        - name: mysql-data
-          mountPath: /var/lib/mysql
-        - name: mysql-socket
-          mountPath: /var/run/mysqld
-        securityContext:
-          runAsUser: 0
       containers:
       - name: mysql
         image: mysql:8.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - name: mysql
           containerPort: 3306
-          protocol: TCP
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
@@ -144,13 +66,8 @@ spec:
             secretKeyRef:
               name: mysql-secrets
               key: user-password
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "250m"
-          limits:
-            memory: "2Gi"
-            cpu: "1000m"
+        # Optional: keep MySQL 8 auth behavior compatible
+        args: ["--default-authentication-plugin=mysql_native_password"]
         volumeMounts:
         - name: mysql-data
           mountPath: /var/lib/mysql
@@ -159,20 +76,17 @@ spec:
           readOnly: true
         - name: mysql-socket
           mountPath: /var/run/mysqld
-        securityContext:
-          runAsUser: 999  # MySQL user
-          runAsGroup: 999  # MySQL group
         livenessProbe:
-          tcpSocket:
-            port: 3306
+          exec:
+            command: ["bash","-lc","mysqladmin ping -uroot -p\"$MYSQL_ROOT_PASSWORD\""]
           initialDelaySeconds: 60
           periodSeconds: 30
-          timeoutSeconds: 10
+          timeoutSeconds: 5
           failureThreshold: 3
         readinessProbe:
-          tcpSocket:
-            port: 3306
-          initialDelaySeconds: 30
+          exec:
+            command: ["bash","-lc","mysqladmin ping -uroot -p\"$MYSQL_ROOT_PASSWORD\""]
+          initialDelaySeconds: 20
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 3
@@ -188,9 +102,6 @@ spec:
     spec:
       accessModes: ["ReadWriteOnce"]
       storageClassName: local-storage
-      selector:
-        matchLabels:
-          app: mysql
       resources:
         requests:
           storage: 50Gi
