--- a/k8s-manifests/backend/deployment.yaml
+++ b/k8s-manifests/backend/deployment.yaml
@@ -97,7 +97,7 @@ spec:
         - name: DB_HOST
           value: "mysql"
         - name: DB_USER
-          value: "root"
+          value: "ai_receptionist"
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
